# Copyright 2026 Google LLC
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# ---[ Options.
SET(YNN_LOG_LEVEL "warning" CACHE STRING "Log level (error, warning, info, debug, verbose)")
SET_PROPERTY(CACHE YNN_LOG_LEVEL PROPERTY STRINGS error warning info debug verbose)

# ---[ Log library.
ADD_LIBRARY(ynnpack_log INTERFACE)
TARGET_COMPILE_DEFINITIONS(ynnpack_log INTERFACE YNN_LOG_LEVEL=YNN_LOG_LEVEL_${YNN_LOG_LEVEL})
TARGET_LINK_LIBRARIES(ynnpack_log INTERFACE slinky_base)

# ---[ Base library.
ADD_LIBRARY(ynnpack_base STATIC
  arch.cc
  to_string.cc
  type.cc
)

TARGET_INCLUDE_DIRECTORIES(ynnpack_base PUBLIC .)
TARGET_LINK_LIBRARIES(ynnpack_base PUBLIC ynnpack_log slinky_base)

IF(YNN_ENABLE_CPUINFO)
  # Check if cpuinfo target exists (it should if XNNPACK is set up correctly)
  IF(TARGET cpuinfo)
    TARGET_LINK_LIBRARIES(ynnpack_base PUBLIC cpuinfo)
    TARGET_COMPILE_DEFINITIONS(ynnpack_base PUBLIC YNN_ENABLE_CPUINFO)
  ENDIF()
ENDIF()

# Architecture-specific defines.
IF(YNNPACK_TARGET_PROCESSOR STREQUAL "x86")
  TARGET_COMPILE_DEFINITIONS(ynnpack_base PUBLIC YNN_ARCH_X86 YNN_ARCH_X86_32)
ELSEIF(YNNPACK_TARGET_PROCESSOR STREQUAL "x86_64")
  TARGET_COMPILE_DEFINITIONS(ynnpack_base PUBLIC YNN_ARCH_X86 YNN_ARCH_X86_64)
ELSEIF(YNNPACK_TARGET_PROCESSOR STREQUAL "arm")
  TARGET_COMPILE_DEFINITIONS(ynnpack_base PUBLIC YNN_ARCH_ARM YNN_ARCH_ARM32)
ELSEIF(YNNPACK_TARGET_PROCESSOR STREQUAL "arm64")
  TARGET_COMPILE_DEFINITIONS(ynnpack_base PUBLIC YNN_ARCH_ARM YNN_ARCH_ARM64)
ELSEIF(YNNPACK_TARGET_PROCESSOR STREQUAL "hexagon")
  TARGET_COMPILE_DEFINITIONS(ynnpack_base PUBLIC YNN_ARCH_HEXAGON)
ELSEIF(YNNPACK_TARGET_PROCESSOR STREQUAL "wasm")
  TARGET_COMPILE_DEFINITIONS(ynnpack_base PUBLIC YNN_ARCH_WASM)
ENDIF()

MACRO(YNN_MAP_OPTION OPTION DEFINE)
  IF(${OPTION})
    TARGET_COMPILE_DEFINITIONS(ynnpack_base PUBLIC ${DEFINE})
  ENDIF()
ENDMACRO()

# x86 mapping
YNN_MAP_OPTION(YNN_ENABLE_X86_SSE2 YNN_ARCH_X86_SSE2)
YNN_MAP_OPTION(YNN_ENABLE_X86_SSSE3 YNN_ARCH_X86_SSSE3)
YNN_MAP_OPTION(YNN_ENABLE_X86_SSE41 YNN_ARCH_X86_SSE41)
YNN_MAP_OPTION(YNN_ENABLE_X86_AVX YNN_ARCH_X86_AVX)
YNN_MAP_OPTION(YNN_ENABLE_X86_F16C YNN_ARCH_X86_F16C)
YNN_MAP_OPTION(YNN_ENABLE_X86_F16C_FMA3 YNN_ARCH_X86_F16C_FMA3)
YNN_MAP_OPTION(YNN_ENABLE_X86_AVX2 YNN_ARCH_X86_AVX2)
YNN_MAP_OPTION(YNN_ENABLE_X86_FMA3 YNN_ARCH_X86_FMA3)
YNN_MAP_OPTION(YNN_ENABLE_X86_AVX2_FMA3 YNN_ARCH_X86_AVX2_FMA3)
YNN_MAP_OPTION(YNN_ENABLE_X86_AVX512 YNN_ARCH_X86_AVX512)
YNN_MAP_OPTION(YNN_ENABLE_X86_AVX512BF16 YNN_ARCH_X86_AVX512BF16)
YNN_MAP_OPTION(YNN_ENABLE_X86_AVX512FP16 YNN_ARCH_X86_AVX512FP16)
YNN_MAP_OPTION(YNN_ENABLE_X86_AVX512VNNI YNN_ARCH_X86_AVX512VNNI)
YNN_MAP_OPTION(YNN_ENABLE_X86_AMXBF16 YNN_ARCH_X86_AMXBF16)
YNN_MAP_OPTION(YNN_ENABLE_X86_AMXFP16 YNN_ARCH_X86_AMXFP16)
YNN_MAP_OPTION(YNN_ENABLE_X86_AMXINT8 YNN_ARCH_X86_AMXINT8)

# ARM mapping
YNN_MAP_OPTION(YNN_ENABLE_ARM_NEON YNN_ARCH_ARM_NEON)
YNN_MAP_OPTION(YNN_ENABLE_ARM_NEONDOT YNN_ARCH_ARM_NEONDOT)
YNN_MAP_OPTION(YNN_ENABLE_ARM_NEONFMA YNN_ARCH_ARM_NEONFMA)
YNN_MAP_OPTION(YNN_ENABLE_ARM_NEONFP16 YNN_ARCH_ARM_NEONFP16)
YNN_MAP_OPTION(YNN_ENABLE_ARM_NEONFP16ARITH YNN_ARCH_ARM_NEONFP16ARITH)
YNN_MAP_OPTION(YNN_ENABLE_ARM_NEONBF16 YNN_ARCH_ARM_NEONBF16)
YNN_MAP_OPTION(YNN_ENABLE_ARM64_NEONI8MM YNN_ARCH_ARM64_NEONI8MM)
YNN_MAP_OPTION(YNN_ENABLE_ARM64_NEON YNN_ARCH_ARM64_NEON)
YNN_MAP_OPTION(YNN_ENABLE_ARM64_SME YNN_ARCH_ARM64_SME)
YNN_MAP_OPTION(YNN_ENABLE_ARM64_SME2 YNN_ARCH_ARM64_SME2)
YNN_MAP_OPTION(YNN_ENABLE_ARM64_SVE YNN_ARCH_ARM64_SVE)

# Others
YNN_MAP_OPTION(YNN_ENABLE_HVX YNN_ARCH_HVX)
YNN_MAP_OPTION(YNN_ENABLE_WASM_SIMD128 YNN_ARCH_WASM_SIMD128)

IF(YNNPACK_BUILD_TESTS)
  ADD_SUBDIRECTORY(test)
ENDIF()
