# Copyright 2026 Google LLC
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

ADD_SUBDIRECTORY(binary)
ADD_SUBDIRECTORY(dot)
ADD_SUBDIRECTORY(lut)
ADD_SUBDIRECTORY(reduce)
ADD_SUBDIRECTORY(ternary)
ADD_SUBDIRECTORY(transpose)
ADD_SUBDIRECTORY(unary)
